--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table>
       <tr>
-        <td><img src="C:\Users\Matt\Desktop\Web Development\HTML - Personal Site\headshot.jpg" width="150" height="130" alt=""></td>
+        <td><img src="Images\headshot.jpg" width="150" height="130" alt=""></td>
         <td><h1>Matthew Campbell</h1>
         <p>
           <em>I am the greatest</em><br>
